--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,18 +6,13 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   
   datasource:
-    url: ${DB_URL:jdbc:h2:mem:testdb}
-    driverClassName: ${DB_DRIVER:org.h2.Driver}
-    username: ${DB_USERNAME:sa}
-    password: ${DB_PASSWORD:password}
-    
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/sora}
+    driverClassName: ${DB_DRIVER:org.postgresql.Driver}
+    username: ${DB_USERNAME:sora}
+    password: ${DB_PASSWORD:sora}
       
   jpa:
-    database-platform: ${JPA_DIALECT:org.hibernate.dialect.H2Dialect}
+    database-platform: ${JPA_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
     hibernate:
       ddl-auto: ${DDL_AUTO:validate}
     show-sql: ${SHOW_SQL:true}
@@ -60,6 +55,13 @@ openstreetmap:
   base-url: ${OSM_BASE_URL:https://nominatim.openstreetmap.org}
   user-agent: ${OSM_USER_AGENT:SoraApp/1.0}
 
+cors:
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://10.0.2.2:8080}
+  allowed-methods: ${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,PATCH,OPTIONS}
+  allowed-headers: ${CORS_ALLOWED_HEADERS:*}
+  allow-credentials: ${CORS_ALLOW_CREDENTIALS:true}
+  max-age: ${CORS_MAX_AGE:3600}
+
 server:
   port: ${SERVER_PORT:8080}
   error:
@@ -98,8 +100,8 @@ spring:
       on-profile: dev
   
   datasource:
-    url: jdbc:h2:mem:devdb
-    driverClassName: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/sora
+    driverClassName: org.postgresql.Driver
     
   jpa:
     show-sql: true
