--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5432/sora}
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/sora?currentSchema=public}
     driverClassName: ${DB_DRIVER:org.postgresql.Driver}
     username: ${DB_USERNAME:sora}
     password: ${DB_PASSWORD:sora}
@@ -23,7 +23,7 @@ spring:
   flyway:
     enabled: ${FLYWAY_ENABLED:true}
     locations: ${FLYWAY_LOCATIONS:classpath:db/migration}
-    baseline-on-migrate: ${FLYWAY_BASELINE_ON_MIGRATE:true}
+    baseline-on-migrate: ${FLYWAY_BASELINE_ON_MIGRATE:false}
     validate-on-migrate: ${FLYWAY_VALIDATE_ON_MIGRATE:true}
     
   messages:
@@ -41,9 +41,9 @@ jwt:
   refresh-token-expiration: ${JWT_REFRESH_EXPIRATION:2592000000}
 
 cloudinary:
-  cloud-name: ${CLOUDINARY_CLOUD_NAME}
-  api-key: ${CLOUDINARY_API_KEY}
-  api-secret: ${CLOUDINARY_API_SECRET}
+  cloud-name: ${CLOUDINARY_CLOUD_NAME:dummy}
+  api-key: ${CLOUDINARY_API_KEY:dummy}
+  api-secret: ${CLOUDINARY_API_SECRET:dummy}
   secure: true
 
 file:
@@ -87,10 +87,7 @@ logging:
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
 springdoc:
-  api-docs:
-    path: /api-docs
   swagger-ui:
-    path: /swagger-ui.html
     tags-sorter: alpha
 
 ---
@@ -100,7 +97,7 @@ spring:
       on-profile: dev
   
   datasource:
-    url: jdbc:postgresql://localhost:5432/sora
+    url: jdbc:postgresql://localhost:5432/sora?currentSchema=public
     driverClassName: org.postgresql.Driver
     
   jpa:
@@ -119,7 +116,7 @@ spring:
       on-profile: prod
       
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:sora}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:sora}?currentSchema=public
     driverClassName: org.postgresql.Driver
     username: ${DB_USERNAME:sora}
     password: ${DB_PASSWORD:sora}
