--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -29,6 +29,10 @@ spring:
   messages:
     basename: messages
     encoding: UTF-8
+
+  web:
+    locale: pt_BR
+    locale-resolver: fixed
     
   servlet:
     multipart:
