globo tela perfil

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
         android:theme="@style/Theme.SoraAndroid"
         android:usesCleartextTraffic="true"
         tools:targetApi="35">
+
+        <meta-data
+            android:name="com.mapbox.token"
+            android:value="@string/mapbox_access_token" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
